[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firma_electronica_mid"
version = "0.1.0"
description = "API Firma Electrónica MID"
requires-python = "==3.11.*"

dependencies = [
  "requests==2.32.4",
  "Flask==3.0.3",
  "flask-cors==5.0.0",
  "flask-restx==1.3.0",
  "flask-swagger-ui==5.21.0",
  "nuxeo[oauth2]==6.1.2",
  "cryptography==45.0.4",
  "PyYAML==6.0.2",
  "pdfminer==20191125",
  "pdfminer.six==20250324",
  "PyPDF2==2.12.1",
  "pypdf==5.7.0",
  "reportlab==4.4.2",
  "fillpdf==0.7.3",
  "x-ray==0.3.4",
  "gunicorn"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5"
]
